--- a/force-app/main/default/classes/DatabaseProxy.cls
+++ b/force-app/main/default/classes/DatabaseProxy.cls
@@ -1,4 +1,4 @@
-public with sharing class DatabaseProxy {
+public inherited sharing class DatabaseProxy {
 
 	public List<SObject> query(String query) {
 		return Database.query(query);
