PEH-609 refactoring. Add Platform Event on related objects.

--- a/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
+++ b/force-app/main/default/classes/ContentDocumentLinkTriggerHandler.cls
@@ -5,4 +5,14 @@ public with sharing class ContentDocumentLinkTriggerHandler extends TriggerHandl
         ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
         contentDocumentLinkService.extendSharingToAllUsers(newList);
     }
+    public override void afterInsert(List<SObject> newList) {
+        ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
+        contentDocumentLinkService.remindEventFire(newList);
+    }
+
+    public override void afterDelete(List<SObject> oldList) {
+        ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
+        contentDocumentLinkService.remindEventFire(oldList);
+    }
+
 }
